--- a/code/src/components/happyForm.css
+++ b/code/src/components/happyForm.css
@@ -9,7 +9,7 @@
   justify-content: space-between;
   margin: 15px auto;
   padding: 18px;
-  background-color: rgba(255, 192, 203, 0.796);
+  background-color: #ffd9de;
 }
 
 h3 {
@@ -53,4 +53,10 @@ p {
 }
 .p-green {
   color: #2cb797;
+}
+/* MEDIA QUERIES */
+@media only screen and (max-width: 600px) {
+  .happy-form {
+    width: 300px;
+  }
 }
