--- a/code/src/components/happyThoughts.css
+++ b/code/src/components/happyThoughts.css
@@ -12,7 +12,7 @@
   margin: 20px auto;
   word-wrap: break-word;
   padding: 18px;
-  background-color: #ffe9f4;
+  background-color: #fff7f8;
 }
 
 .happy-thought h3 {
@@ -56,4 +56,11 @@ p {
   margin-top: 20px;
   padding-left: 10px;
   font-family: "Turret Road", cursive;
+}
+
+/* MEDIA QUERIES */
+@media only screen and (max-width: 600px) {
+  .happy-thought {
+    width: 300px;
+  }
 }
