--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #ff9999;
+  background-color: #eacecd;
 }
 
 code {
