--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,129 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+header {
+  background-color:#FFADAD;
+  text-align: center;
+  margin-bottom: 20px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+}
+
+.thought-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-box {
+  width: 400px;
+  height: 150px;
+  border: 1px solid black;
+  background-color: #F2F0F0;
+  box-shadow: 5px 5px;
+  padding: 20px;
+  margin: 20px;
+}
+
+form {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;  
+}
+
+textarea {
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  resize: none;
+  padding: 0;
+}
+
+.send-thought {
+  background-color: #FFADAD;
+  width: 50%;
+  border-radius: 30px;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.send-thought:disabled {
+  color: grey;
+}
+
+/*Other thought messages*/
+
+.message-box {
+  width: 400px;
+  height: 100px;
+  border: 1px solid black;
+  box-shadow: 5px 5px;
+  padding: 20px;
+  margin: 20px;
+}
+
+.message-wrapper {
+  height: 55%;
+  overflow: hidden;
+}
+
+.message-wrapper p {
+  margin: 0;
+}
+
+.like-button {
+  width: 37px;
+  height: 37px;
+  border-radius: 50%;
+  border: none;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.like-wrapper {
+  display: flex;
+}
+
+.message-infos-wrapper {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: #B1B1B1;
+  font-size: 13px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 15px;
+}
+
+/*Footer*/
+
+footer {
+  background-color:#FFADAD;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 12px;
+  padding: 20px;
+  line-height: 13px;
+  margin-top: 20px;
+}
+
+footer p {
+  margin: 5px;
+}
+
+footer img {
+  width: 50px;
+  margin: 7px;
 }
