--- a/code/src/components/thought-input.css
+++ b/code/src/components/thought-input.css
@@ -14,6 +14,7 @@ label {
 
 .input {
   font-family: 'Inconsolata', monospace;
+  font-size: 20px;
   width: 500px;
   height: 40px;
   margin-top: 15px;
