--- a/code/src/components/messageCard.css
+++ b/code/src/components/messageCard.css
@@ -4,7 +4,7 @@
   border: 2px solid black;
   justify-content: space-between;
   margin: 40px 0;
-  min-height: 150px;
+  min-height: 130px;
   max-height: 300px;
   box-shadow: 7px 7px;
   word-wrap: break-word;
@@ -19,6 +19,11 @@
 
 .heart-btn {
   margin-right: 10px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+  outline: none;
 }
 
 .card-message {
@@ -29,6 +34,7 @@
 
 .moment {
   font-size: 14px;
+  color: #ccc;
 }
 
 .super-liked {
@@ -40,5 +46,5 @@
 }
 
 .not-liked {
-  background: black;
+  background: silver;
 }
