--- a/code/src/components/messageInput.css
+++ b/code/src/components/messageInput.css
@@ -4,6 +4,7 @@
   height: 220px;
   width: 400px;
   border: 2px solid black;
+  background-color: #e6e6e6;
   box-shadow: 7px 7px;
 }
 
@@ -19,8 +20,9 @@
   margin: 4px 20px;
   padding: 0;
   font-weight: 700;
-  background: none;
-  border: 2px solid #000;
+  background: #fff;
+  /* border: 2px solid #000; */
+  border: none;
   /* border-radius: 6px; */
 }
 
@@ -35,12 +37,22 @@
   font-size: 14px;
 }
 
+.max-characters {
+  color: red;
+  font-weight: 500;
+}
+
 textarea {
   resize: none;
   outline: none;
-  /* border-radius: 6px; */
+}
+
+textarea::placeholder {
+  color: #ccc;
 }
 
 textarea[type="text"] {
   font-family: "Roboto Mono", monospace;
+  padding-left: 10px;
+  padding-top: 5px;
 }
