final work for today

--- a/code/src/components/css/heartButton.css
+++ b/code/src/components/css/heartButton.css
@@ -24,3 +24,15 @@
   height: 35px;
   border-radius: 50%;
 }
+
+.liked {
+  background: "#FFADAD"
+}
+
+.superliked {
+  background: blue;
+}
+
+.noLikes {
+background: "#EAEAEA";
+}
