--- a/code/src/components/happyThought.css
+++ b/code/src/components/happyThought.css
@@ -1,37 +1,79 @@
 
 .thoughts-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 40px;
+}
   
+.thought-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  background-color: #FFFFFF;
+  border: solid 1px #000000;
+  box-shadow: 13px 14px 0px -6px rgba(0,0,0,1);
+  padding: 15px;
+  margin: 20px;
+  width: 90%;
+  min-height: 120px;
+}
+  
+.text-message {
+  font-family: Menlo;
+  font-size: 12px;
+}
+  
+.thought-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+  
+.text-time {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto";
+  font-size: 10px;
+  font-weight: 600;
+  color: #C1C1C1;
+}
+
+/* computer only */
+@media (min-width: 1025px) {
+
   .thought-container {
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #FFFFFF;
-    border: solid 1px #000000;
+    box-shadow: 13px 14px 0px -6px rgba(0,0,0,1);
+    padding: 20px;
+    width: 500px;
+    min-height: 150px;
+  }
+
+  .text-message {
+    font-size: 14px;
+  }
+
+  .text-time {
+    font-size: 11px;
+  }
+}
+
+/* tablet only */
+@media screen and (min-width: 667px) and (max-width: 1024px) {
+
+  .thought-container {
     box-shadow: 13px 14px 0px -6px rgba(0,0,0,1);
     padding: 15px;
-    margin: 20px;
-    font-size: 12px;
     width: 400px;
+    min-height: 120px;
   }
-  
+
   .text-message {
-    font-family: Menlo;
-    width: auto;
+    font-size: 12px;
   }
-  
-  .thought-footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-  }
-  
+
   .text-time {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto";
     font-size: 10px;
-    font-weight: 600;
-    color: #C1C1C1;
   }
+
+}
