--- a/code/src/index.css
+++ b/code/src/index.css
@@ -62,6 +62,7 @@ h1 {
   font-size: 20px;
   margin: 15px 0px 15px;
   padding: 10px;
+  cursor: pointer;
 }
 
 .thoughts-chars, .created-at {
@@ -76,6 +77,7 @@ h1 {
   padding: 7px 13px;
   margin-right: 13px;
   border-radius: 50%;
+  cursor: pointer;
 }
 
 /* FOOTER */
