--- a/code/src/components/heart.css
+++ b/code/src/components/heart.css
@@ -1,11 +1,23 @@
 .heart__btn {
-    width: 40%;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .heart__btn-icon {
-    width: 60%;
+    width: 30px;
 }
 
 .heart__like {
-    width: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100px;
+    height: 50px;
+    margin-top: 20px;
+}
+
+.heart__like .heart__btn-icon {
+    width: 20px;
 }
