--- a/code/src/components/thoughts.css
+++ b/code/src/components/thoughts.css
@@ -8,26 +8,18 @@
 
 .thoughts__card {
     background: #ECDEC6;
-    /* display: flex;
-    flex-wrap: wrap; */
     justify-self: center;
     padding: 10px;
     margin: 5px;
-    width: 250px;
+    width: 80%;
 }
 
-.thoughts__info-container {
+.thoughts__info-container, .thoughts__message-and-like {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: space-between;
     font-size: 16px;
-    position: relative;
 }
 
-/* .thoughts__time-posted, .thoughts__amount-of-likes {
-    font-size: 16px;
-    padding: 2px;
-}
- */
 /*How to solve when someone writes a really long word?*/
 .thoughts__message {
     font-size: 22px;
@@ -35,15 +27,11 @@
 }
 
 .thoughts__heart-icon {
-    height: 50px;
+    height: 25px;
+    width: 25px;
+    margin-top: 12px;
 }
-.thoughts__amount-of-likes {
-    position: absolute;
-    left: 20px;
-    top: 0px;
-} 
-.thoughts__ten-amount-of-likes {
-    position: absolute;
-    left: 15px;
-    top: 0px;
-} 
+
+.thoughts__like-container {
+    display: flex;
+}
