--- a/code/src/Components/LikedMessage.css
+++ b/code/src/Components/LikedMessage.css
@@ -1,5 +1,5 @@
 .liked{
-  -webkit-appearance: button;
+  -webkit-appearance: none;
   background: rgb(250, 168, 168);
   border-radius: 50%;
   border: none;
@@ -9,7 +9,7 @@
 }
 
 .not-liked{
-  -webkit-appearance: button;
+  -webkit-appearance: none;
   background: rgb(230, 229, 229);
   border-radius: 50%;
   border: none;
@@ -21,19 +21,16 @@
 .heart-like{
   -webkit-appearance: none;
   height: 20px;
-  /* margin-top: 5px; */
   margin: 5px 1px 0px 0;
 }
 
 .times-liked{
   font-family: 'Inconsolata', monospace;
-  /* margin: 13px 2px 5px 0; */
   color: rgb(126, 126, 126);
 }
 
 .time{
   font-family: 'Inconsolata', monospace;
   margin-right: 5px;
-  /* margin: 13px 5px 13px 0; */
   color: rgb(126, 126, 126);
 }
