updates styling for safari on like button

--- a/code/src/Components/LikedMessage.css
+++ b/code/src/Components/LikedMessage.css
@@ -1,7 +1,6 @@
 .heart-image{
-  display: block;
-  font-size: 17px;
-  margin-right: 5px;
+  display: flex;
+  justify-content: space-around;
 }
 
 .liked{
