--- a/code/src/components/ThoughtMessage.css
+++ b/code/src/components/ThoughtMessage.css
@@ -37,7 +37,8 @@ article button:hover {
 }
 
 article button span {
-  padding: 7px 0 5px 0;
+  padding: 5px 0 5px 2px;
+  font-size: 18px;
 }
 
 .thought {
