--- a/code/src/index.css
+++ b/code/src/index.css
@@ -21,17 +21,18 @@ p {
 }
 
 .thought-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-sizing: border-box;
+  margin: 20px;
+  padding: 15px;
   width: 350px;
   min-height: 112px;
   background-color: white;
   border: 1px solid black;
   box-shadow: 5px 5px black;
-  margin: 20px;
-  padding: 15px;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  
 }
 
 .new-thought {
@@ -64,6 +65,9 @@ p {
   font-size: 13px;
   font-weight: bold;
   margin: 0;
+  margin-bottom: 10px;
+  overflow-wrap: break-word;
+  
   
 }
 
@@ -117,5 +121,52 @@ p {
 
 textarea {
   width: 100%;
-  margin: 15px 0;
+  margin: 10px 0 5px 0;
+}
+
+.warning {
+  color: red;
+}
+
+.character-count {
+  text-align: right;
+}
+
+.new-thought .details {
+  margin-bottom: 10px;
+}
+
+.loading-container {
+  display: inline-flex;
+  justify-content: center;
+  width: 100px;
+  height: auto;
+
+}
+
+.loading-circle {
+  width: 10px;
+  height: 10px;
+  background-color: #FFADAD;
+  border-radius: 50%;
+  margin: 5px;
+  animation: loading 0.6s ease infinite;
+}
+
+.loading-container :nth-child(1) {
+  animation-delay: 0s;
+}
+
+.loading-container :nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.loading-container :nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+@keyframes loading {
+  0% {background-color: #ffd5d5;}
+  50% {background-color: #FFADAD;}
+  100% {background-color: #ffd5d5;}
 }
