--- a/code/src/Style/LikeButton.css
+++ b/code/src/Style/LikeButton.css
@@ -1,11 +1,15 @@
 .like-button {
-  border-radius: 50%;
   background-color: #d3d3d3;
+  border-radius: 50%;
   border: 1px solid #d3d3d3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 40px;
   margin-right: 10px;
   width: 40px;
 }
+
 
 .pink-button {
   background-color: #ff9ebb;
