--- a/code/src/components/happyThought.css
+++ b/code/src/components/happyThought.css
@@ -23,6 +23,7 @@
 .text-message {
   font-family: Menlo;
   font-size: 12px;
+  word-break: break-word;
 }
   
 .thought-footer {
@@ -43,7 +44,6 @@
 @media (min-width: 1025px) {
 
   .thought-container {
-    box-shadow: 13px 14px 0px -6px rgba(0,0,0,1);
     padding: 20px;
     width: 500px;
     min-height: 150px;
@@ -62,18 +62,6 @@
 @media screen and (min-width: 667px) and (max-width: 1024px) {
 
   .thought-container {
-    box-shadow: 13px 14px 0px -6px rgba(0,0,0,1);
-    padding: 15px;
     width: 400px;
-    min-height: 120px;
   }
-
-  .text-message {
-    font-size: 12px;
-  }
-
-  .text-time {
-    font-size: 10px;
-  }
-
 }
