--- a/code/src/index.css
+++ b/code/src/index.css
@@ -18,16 +18,17 @@ body {
 
 .happy-thoughts-title {
   text-align: center;
-  margin: 40px 0 20px 0;
-  font-size: 22px;
-  font-family: Menlo;
+  margin: 30px 0 15px 0;
+  font-size: 24px;
+  font-family: Menlo, 'Courier New', Courier, monospace;
 }
 
 /* computer only */
 @media (min-width: 1025px) {
 
   .happy-thoughts-title {
-  font-size: 36px;
+    font-size: 38px;
+    margin: 40px 0 20px 0;
   }
 }
 
@@ -35,6 +36,7 @@ body {
 @media screen and (min-width: 667px) and (max-width: 1024px) {
 
   .happy-thoughts-title {
-    font-size: 28px;
-    }
+    font-size: 30px;
+    margin: 40px 0 20px 0;
+  }
 }
