--- a/code/src/Styles/index.css
+++ b/code/src/Styles/index.css
@@ -2,17 +2,8 @@
 
 body {
   margin: 0;
-  background: #F5F5F5;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
+ -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
 
 .wrapper {
@@ -22,12 +13,6 @@ code {
   align-items: center;
   
 }
-
-/* .cards-container{
-
-} */
-
-/* ----Message-card */
 
 .message{
   font-family: 'Montserrat', sans-serif;
@@ -39,7 +24,11 @@ code {
 .message-time {
   font-size: 15px;
   margin-left: 10px;
-  /* align-self: flex-end; */
+  color: #D3D3D3;
+} 
+
+.nrOfLikes{
+  color: #D3D3D3;
 }
 
 .message-card, .form-card {
@@ -55,6 +44,7 @@ code {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    background: #F5F5F5;
 } 
 
 .input-text{
@@ -72,27 +62,32 @@ code {
 
 .form-card{
   display: flex;
-  /* flex-direction: column; */
-  /* align-items: center; */
   flex-wrap: wrap;
   justify-content: space-between;
-  /* padding: 5px; */
+  background: #f1dbda;
+ 
+}
+
+.love {
+  margin-left: 20px;
 }
 
 .length {
   align-self: flex-end;
+  margin-bottom: 10px;
 }
 
 .form-button{
   background:  #ffadad;
   width: 185px;
-  height: 45px;
+  height: 40px;
   border-radius: 20px;
   border: none;
   display: flex;
   align-items: center;
   margin-left: 20px;
-  margin-top: 5px;
+  margin-top: 15px; 
+  
 }
 
 .very-liked {
@@ -108,8 +103,8 @@ code {
 }
 
 .heart-button {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   border: none;
   display: flex;
@@ -124,10 +119,26 @@ code {
 
  .heart-container{
    display: flex;
+   align-items: center;
 
+ }
 
-  /* border: none; */
+ @media (max-width: 498px){
+  .message-card, .form-card {
+    width: 350px;
+  }
+ }
 
+ @media (max-width: 430px){
+  .message-card, .form-card {
+    width: 300px;
+  }
+ }
+
+ @media (max-width: 373px){
+  .message-card, .form-card {
+    width: 250px;
+  }
  }
 
 
