Added some mq to stop it looking wonky in mobile-view

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -98,3 +98,15 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
 }
+/* For smaller screens*/
+@media (max-width: 500px) {
+	.message-container {
+		width: 300px;
+	}
+
+	.happy-input-textarea {
+		height: 50px;
+		width: 274px;
+		margin: 10px;
+	}
+}
