fixed likes and changed approach on timestamp due to problems with moment

--- a/code/src/HappyThoughts.css
+++ b/code/src/HappyThoughts.css
@@ -16,16 +16,13 @@
   font-size: 15px;
   font-weight: 500;
   font-family: courier;
+  word-wrap: break-word;
 }
 
 .thought-info {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.thoughts-time {
-  font-size: 10px;
 }
 
 @media (min-width: 669px) {
