--- a/code/src/LikeButton.css
+++ b/code/src/LikeButton.css
@@ -1,14 +1,29 @@
-button {
-  background: rgb(192, 145, 145);
+.like-button {
+  display: flex;
+  justify-content: center;
+  background: rgb(241, 161, 161);
   border-radius: 50%;
+  border: 1px solid rgb(241, 161, 161);
   width: 30px;
   height: 30px;
-  border: 1px solid rgb(192, 145, 145);
-  font-size: 24px;
+  font-size: 18px;
   color: rgb(196, 64, 64);
+  margin-right: 8px;
+  padding: 0;
 }
 
-button:hover {
+.like-button:hover {
   background: white;
   border: 1px solid black;
+  cursor: pointer;
+}
+
+.like-text {
+  font-size: 11px;
+  color: gray;
+}
+
+.like-container {
+  display: flex;
+  flex-direction: row;
 }
