--- a/code/src/LikeButton.css
+++ b/code/src/LikeButton.css
@@ -6,10 +6,10 @@
   border: 1px solid rgb(241, 161, 161);
   width: 30px;
   height: 30px;
-  font-size: 18px;
+  font-size: 14px;
   color: rgb(196, 64, 64);
   margin-right: 8px;
-  padding: 0;
+  padding-top: 3px;
 }
 
 .like-button:hover {
