--- a/code/src/index.css
+++ b/code/src/index.css
@@ -12,3 +12,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+}
