--- a/code/src/HappyList.css
+++ b/code/src/HappyList.css
@@ -7,7 +7,7 @@
   align-items: center;
   margin: auto;
   width: 100vw;
-  border: 1px solid #000;
+  /* border: 1px solid #000; */
 }
 
 .happy-post {
@@ -23,4 +23,41 @@
   word-break: break-all;
   margin: 20px;
   font-weight: 500;
+}
+
+.happy-post-footer {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin: 20px;
+}
+
+.happy-likes-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.some-likes,
+.many-likes,
+.no-likes {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+  margin-right: 10px;
+}
+
+.some-likes {
+  background: #f8cccc;
+}
+
+.many-likes {
+  background: #f87979;
+}
+
+.no-likes {
+  background: #f3f1f1;
+}
+.happy-message-time {
+  color: #7c7b7b;
 }
