--- a/code/src/LikeButton.css
+++ b/code/src/LikeButton.css
@@ -9,7 +9,7 @@
   font-size: 14px;
   color: rgb(196, 64, 64);
   margin-right: 8px;
-  padding: 2px 0px 2px 5px;
+  padding: 0;
 }
 
 .like-button:hover {
