maybe this will wokr

--- a/code/src/LikeButton.css
+++ b/code/src/LikeButton.css
@@ -1,6 +1,7 @@
 .like-button {
   display: flex;
   justify-content: center;
+  align-items: center;
   background: rgb(241, 161, 161);
   border-radius: 50%;
   border: 1px solid rgb(241, 161, 161);
@@ -21,6 +22,7 @@
 .like-text {
   font-size: 11px;
   color: gray;
+  padding-top: 10px;
 }
 
 .like-container {
