--- a/code/src/components/heart.css
+++ b/code/src/components/heart.css
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: 100px;
     height: 50px;
     margin-top: 20px;
