--- a/code/src/Components/ThoughtsMessage.css
+++ b/code/src/Components/ThoughtsMessage.css
@@ -2,12 +2,22 @@
     border: 3px solid #000;
     margin: 10px 0px;
     padding: 30px;
-    min-width: 30%;
-    max-width: 30%;
+    min-width: 50%;
+    max-width: 50%;
     background-color: #fff;
     box-shadow: #000 8px 6px;
     flex-direction: column;
     align-items: center;
+}
+
+.form-message-footer {
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-button {
+    padding: 7px 5px;
+    width: 90%;
 }
 
 .message-text {
@@ -58,4 +68,19 @@ p {
 
 .super-liked {
     background-color: #ff6868;
+}   
+
+@media (min-width: 600px) {   
+     
+    .message-container {
+        min-width: 30%;
+        max-width: 30%;
+    }
+
+    .form-message-footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
