--- a/code/src/index.css
+++ b/code/src/index.css
@@ -16,18 +16,21 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 30px;
+  font-size: 20px;
 }
 
 .thought-section {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .form-box {
-  width: 400px;
-  height: 150px;
+  box-sizing: border-box;
+  width: 90%;
+  height: auto;
   border: 1px solid black;
   background-color: #F2F0F0;
   box-shadow: 5px 5px;
@@ -42,6 +45,10 @@ form {
   align-items: flex-start;  
 }
 
+label {
+  width: 100%;
+}
+
 textarea {
   width: 100%;
   margin-top: 10px;
@@ -52,7 +59,7 @@ textarea {
 
 .send-thought {
   background-color: #FFADAD;
-  width: 50%;
+  width: 100%;
   border-radius: 30px;
   padding: 10px;
   border: none;
@@ -60,14 +67,16 @@ textarea {
 }
 
 .send-thought:disabled {
-  color: grey;
+  color: #bc8282;
+  cursor: auto;
 }
 
 /*Other thought messages*/
 
 .message-box {
-  width: 400px;
-  height: 100px;
+  box-sizing: border-box;
+  width: 90%;
+  height: auto;
   border: 1px solid black;
   box-shadow: 5px 5px;
   padding: 20px;
@@ -77,7 +86,7 @@ textarea {
 .message-wrapper {
   height: 55%;
   overflow: hidden;
-}
+} 
 
 .message-wrapper p {
   margin: 0;
@@ -126,4 +135,44 @@ footer p {
 footer img {
   width: 50px;
   margin: 7px;
+}
+
+/*MEDIA QUERIES*/
+
+/*Tablet view*/
+@media (min-width: 668px) {
+  header {
+    font-size: 26px;
+  }
+
+  .form-box {
+    width: 50%;
+  }
+
+  .send-thought {
+    width: 70%;
+  }
+
+  .message-box {
+    width: 50%;
+  }
+}
+
+/*Desktop view*/
+@media (min-width: 1025px) {
+  header {
+    font-size: 30px;
+  }
+
+  .form-box {
+    width: 35%;
+  }
+
+  .send-thought {
+    width: 60%;
+  }
+
+  .message-box {
+    width: 35%;
+  }
 }
