--- a/code/src/components/messageForm.css
+++ b/code/src/components/messageForm.css
@@ -1,11 +1,3 @@
-main {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #f7dede;
-}
-
 .happy-form, .message {
   background-color: #f3f1f1;
   border: 2px solid black;
@@ -61,8 +53,6 @@ main {
   transform: scale(0.98); 
   box-shadow: 1px 2px 2px 1px rgba(0, 0, 0, 0.24); 
 }
-
-
 
 .happy-message {
   display: flex;
@@ -120,5 +110,31 @@ button.not-liked {
   font-size: 12px;
   opacity: .5px;
   justify-self: self-start;
+}
+
+@media (min-width: 667px) {
+  
+  article.thought-container {
+    width: 700px;
+    display: inline-flex;
+    justify-content: center;
+  }
+
+  .container-messages {
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .happy-form {
+    width: 800px;
+  }
+
+  .happy-message.message {
+    width: 35%;
+    max-width: 300px;
+  }
 }
 
