--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,1 +1,8 @@
-
+main {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f7dede;
+  }
+  
